feat: add header

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,8 +2,17 @@
     "compilerOptions": {
         "baseUrl": "src",
         "paths": {
+            "@assets/*": [
+                "assets/*"
+            ],
             "@components/*": [
-                "react/components/*"
+                "components/*"
+            ],
+            "@hooks/*": [
+                "hooks/*"
+            ],
+            "@pages/*": [
+                "pages/*"
             ],
             "@img/*": [
                 "assets/img/*"
