--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.2",
     "autoprefixer": "^10.4.20",
+    "classnames": "^2.5.1",
     "cssnano": "^7.0.6",
     "eslint": "^9.11.1",
     "eslint-plugin-react": "^7.37.0",
