--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "deploy": "gh-pages -d dist",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "watchStyles": "node src/modules/utils/buildStyles/buildStyles.js"
   },
   "dependencies": {
     "react": "^18.3.1",
@@ -21,6 +22,7 @@
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.2",
     "autoprefixer": "^10.4.20",
+    "chokidar": "^4.0.3",
     "classnames": "^2.5.1",
     "cssnano": "^7.0.6",
     "eslint": "^9.11.1",
