--- a/jsconfig.json
+++ b/jsconfig.json
@@ -31,6 +31,9 @@
             ],
             "@exports/*": [
                 "modules/exports/*"
+            ],
+            "@utils-scss/*": [
+                "styles/utils/utils.scss*"
             ]
         }
     },
