--- a/package.json
+++ b/package.json
@@ -8,14 +8,9 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
     "build": "vite build",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
-    "prettier": "prettier --write .",
-    "prettier:check": "prettier --check .",
-    "rome:check": "rome check ./src",
-    "rome:format": "rome format ./src",
-    "rome:fix": "rome check --apply ./src",
-    "rome:fix-all": "rome check --apply-unsafe ./src",
+    "biome:check": "npx biome check --write .",
+    "biome:apply": "npx biome check --apply --write .",
+    "biome:unsafe": "npx biome check --unsafe --write .",
     "preview": "vite preview",
     "watchStyles": "node src/modules/utils/buildStyles/buildStyles.js"
   },
@@ -24,7 +19,7 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.11.1",
+    "@biomejs/biome": "^1.9.4",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.2",
@@ -32,10 +27,6 @@
     "chokidar": "^4.0.3",
     "classnames": "^2.5.1",
     "cssnano": "^7.0.6",
-    "eslint": "^9.11.1",
-    "eslint-plugin-react": "^7.37.0",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "^0.4.12",
     "framer-motion": "^11.15.0",
     "gh-pages": "^6.2.0",
     "globals": "^15.9.0",
@@ -43,7 +34,6 @@
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-pxtorem": "^6.1.0",
     "postcss-sort-media-queries": "^5.2.0",
-    "prettier": "^3.4.2",
     "react-intersection-observer": "^9.13.1",
     "react-swipeable": "^7.0.1",
     "reactcci": "^1.14.0",
